# notes-cli

./: README.md  justfile  pyproject.toml
.github/workflows/: test.yaml
src/notes_cli/: __init__.py  core.py  image_processor.py  main.py  markdown_updater.py  utils.py
tests/: test_markdown_updater.py
