[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notes-cli"
version = "0.1.0"
description = "Image cleanup and optimization tool for markdown notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pillow>=10.0.0", "rich>=13.0.0"]

[project.scripts]
notes-cli = "notes_cli.main:main"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict = true

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/notes_cli"]

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.0", "types-pillow>=10.0.0", "pytest>=8.0.0"]
